@@ -1,5 +1,11 @@
+2009-09-01 Hans Boehm <Hans.Boehm@hp.com> (Really mostly Patrick Marlier)
+	* src/atomic_ops/sysdeps/gcc/sparc.h (AO_test_and_set_full): Use
+	AO_TS_VAL_t for "oldval" (for 64-bit support).
+	* src/atomic_ops/sysdeps/gcc/sparc.h (AO_compare_and_swap_full):
+	New function implemented.
+	
 2009-08-12 Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidanski)
-	(diff107_cvs)
+	(diff107_cvs, resembling diff78 and diff88_cvs)
 
 	* src/atomic_ops/sysdeps/sunc/x86.h: New file.
         * src/atomic_ops/sysdeps/sunc/x86_64.h: Ditto.
